feat: add Back to Top button functionality
- Implemented a Back to Top button that appears when the user scrolls down more than 100px.
- Smooth scrolls to the top of the page when the button is clicked.
- Added event listeners for scroll detection and ensured proper cleanup on component unmount.
- Styled the button to be fixed at the bottom right corner with a rounded appearance.

--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,13 @@ section {
   animation: wave 2s infinite;
   transform-origin: 70% 70%;
 }
+
+/* .button{
+  background-color: purple;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+} */
