--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: #191919;
   overflow-x: hidden;
 }
 
@@ -159,13 +159,3 @@ section {
   animation: wave 2s infinite;
   transform-origin: 70% 70%;
 }
-
-/* .button{
-  background-color: purple;
-  position: fixed;
-  right: 50px;
-  bottom: 50px;
-  width: 100px;
-  height: 100px;
-  border-radius: 100%;
-} */
